--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="images/clouds.png" class="clouds">
     <img src="images/mario.gif" class="mario">
     <img src="images/pipe.png" class="pipe">
+    <p class="score">0</p>
   </div>
 </body>
 </html>
