--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet"href="css/style.css">
   <script src="js/script.js"defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <title>Mario Jump</title>
 </head>
 <body>
@@ -13,6 +14,14 @@
     <img src="images/mario.gif" class="mario">
     <img src="images/pipe.png" class="pipe">
     <p class="score">0</p>
+    
+    <div class="message">
+      <h1>You died</h1>
+      <h2 class="scoree">Score: </h2>
+      <a href="" class="again">
+        <img src="images/reload.png" alt="">
+      </a>
+    </div>
   </div>
 </body>
 </html>
