--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   <title>Mario Jump</title>
 </head>
 <body>
+  <audio src="images/music.mp3" autoplay>  </audio>
   <div class="game-board">
     <img src="images/clouds.png" class="clouds">
     <img src="images/mario.gif" class="mario">
     <img src="images/pipe.png" class="pipe">
+    <img src="images/spaceship.gif"  class="spaceship">
+    <img src="images/ballLaser.gif"  class="ballLaser">
+    <img src="images/laser.gif"  class="laser">
+    
     <p class="score">0</p>
     
     <div class="message">
