--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet"href="css/style.css">
-  <script src="js/script.js"defer></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <title>Mario Jump</title>
 </head>
+
 <body>
-  <audio src="images/music.mp3" autoplay>  </audio>
   <div class="game-board">
-    <img src="images/clouds.png" class="clouds">
-    <img src="images/mario.gif" class="mario">
-    <img src="images/pipe.png" class="pipe">
-    <img src="images/spaceship.gif"  class="spaceship">
-    <img src="images/ballLaser.gif"  class="ballLaser">
-    <img src="images/laser.gif"  class="laser">
-    
-    <p class="score">0</p>
-    
-    <div class="message">
-      <h1>You died</h1>
-      <h2 class="scoree">Score: </h2>
-      <a href="" class="again">
-        <img src="images/reload.png" alt="">
-      </a>
+    <div class="estacao">
+      <p class="season"></p>
+
+      <img src="images/clouds.png" class="clouds">
+      <img src="images/mario.gif" class="mario">
+      <img src="images/pipe.png" class="pipe">
+      <img src="images/spaceship.gif" class="spaceship">
+      <img src="images/ballLaser.gif" class="ballLaser">
+      <img src="images/laser.gif" class="laser">
+
+      <p class="score"></p>
+
+      <div class="message">
+        <h1>You died</h1>
+        <h2 class="scoree">Score: </h2>
+        <a href="" class="again">
+          <img src="images/reload.png" alt="">
+        </a>
+      </div>
     </div>
   </div>
+
 </body>
+
 </html>
