--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p class="score"></p>
 
       <div class="message">
-        <h1>You died</h1>
+        <h1 class="win">You died</h1>
         <h2 class="scoree">Score: </h2>
         <a href="" class="again">
           <img src="images/reload.png" alt="">
@@ -33,7 +33,9 @@
       </div>
     </div>
   </div>
-
+  <div class="text-board">
+    <img src="images/supermario.png" alt="">
+  </div>
 </body>
 
 </html>
